--- a/pwa/backend_mock/package.json
+++ b/pwa/backend_mock/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "type": "module"
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "mongoose": "^7.6.1"
+  }
 }
