--- a/pwa/backend_mock/package.json
+++ b/pwa/backend_mock/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "ethers": "^6.8.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1"
   },
   "type": "module"
