--- a/pwa/backend_mock/package.json
+++ b/pwa/backend_mock/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.6.1",
+    "web3": "^4.2.2",
+    "web3-validator": "^2.0.3"
   },
   "type": "module"
 }
