--- a/pwa/backend_mock/package.json
+++ b/pwa/backend_mock/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
