--- a/pwa/backend_mock/package.json
+++ b/pwa/backend_mock/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.3",
+    "babel-jest": "^29.7.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jest-babel": "^1.0.1",
+    "jest-cli": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "web3": "^4.2.2",
